Responsive design, enhancement of the gallery of editions, alignement fixes

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body{
     place-content : center;
     position: fixed;
     left : calc(10vw - 15px);
-    top : calc(50vh - 90px);
+    top : calc(50vh - 110px);
 }
 .bt{
     background-color: black;
@@ -56,24 +56,42 @@ body{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: left;
+    margin-left : 10px;
+}
+section:nth-of-type(3) > .hd2{
+    text-align: left;
+    border-bottom : 3px solid black;
 }
 .ed{
     display: inline;
     background-color : white;
     box-shadow : 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
-    padding : 20px 0px;
+    padding : 20px 0px 0px 0px;
     margin : 10px;
-    width : 30%;
+    width : 24%;
 
     min-width : 200px; /*Width of the cover*/
+    max-width : 280px;
+
+    transition: all 300ms;
+}
+.ed:hover{
+    box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
 }
 .desc{
-    height : 11%;
+    height : 70px;
     display: grid;
     place-content: center;
 }
 .desc > p{
+    font-weight: bold;
+}
+.arch{
+    /* margin : 20px; */
+    margin-top : 30px;
+    font-size : 1.5em;
+    text-align: right;
     font-weight: bold;
 }
 
@@ -81,7 +99,8 @@ section{
     grid-column: 2 / 3;
     display: block;
     width: 100%;
-    height: 105vh;
+    height : fit-content;
+    min-height: 105vh;
     display: grid;
     place-content: center; 
 }
@@ -94,7 +113,7 @@ section:nth-of-type(2){
 section:nth-of-type(3){
     color : black;
     background-color: antiquewhite;
-    height: 210vh;
+    min-height: 210vh;
 }
 section:nth-of-type(4){
     background-color: #c46500;
@@ -102,6 +121,9 @@ section:nth-of-type(4){
 .hd{
     font-size : 3rem;
     margin-bottom : 10px;
+}
+.hd3, .hd2, .hd1, section:nth-of-type(4) > p{
+    margin : 20px 20px;
 }
 .hd1{
     font-size : 2.5rem;
@@ -112,6 +134,44 @@ section:nth-of-type(4){
     font-size : 2rem;
     margin-top : 10px;
 }
+.hd3{
+    font-size: 1.7rem;
+}
 p.hd2{
     margin : 0 40px;
+}
+
+.cont{
+    display: flex;
+    justify-content: right;
+    margin-top: 3%;
+}
+.ud{
+    text-align: right;
+    margin-right: 3%;
+    margin-bottom: 2%;
+}
+@media screen and (min-width: 585px){
+.ud{
+    text-align: right;
+    position: relative;
+    display: inline-block;
+    width: fit-content;
+    height: fit-content;
+    margin-bottom : 2%;
+    margin-right : 15px;
+}
+.ud::after{
+    content: "";
+    position: absolute;
+    height : 2px;
+    right : 0;
+    top : 110%;
+    width: 0%;
+    background-color: black;
+    transition: all 500ms ease-in-out;
+}
+.ud:hover::after{
+    width: 100%;
+}
 }
